objects/Case/fields/Email_CC_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Email_CC_Address_1__c</fullName>
    <label>Email CC Address 1</label>
    <type>Email</type>
</CustomField>