objects/Case/fields/Email_CC_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Email_CC_Address_2__c</fullName>
    <label>Email CC Address 2</label>
    <type>Email</type>
</CustomField>