objects/Case/fields/Email_CC_Address_3__c.field-meta.xml
<CustomField>
    <fullName>Email_CC_Address_3__c</fullName>
    <label>Email CC Address 3</label>
    <type>Email</type>
</CustomField>