objects/Case/fields/Email_CC_List__c.field-meta.xml
<CustomField>
    <fullName>Email_CC_List__c</fullName>
    <label>Email CC List</label>
    <type>TextArea</type>
</CustomField>